# opime-notify

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: main.yml  notify.yml  notify_daily.yml
src/opime_notify/: gsheet.py  main.py  notify.py  schedule.py
src/opime_notify/cli/: fetch_schedule.py  send_line.py
src/opime_notify/fetch_schedule/: __init__.py  monthly_photo_parser.py  ngt48_official.py  otsale_parser.py  session.py  theater_parser.py  theatre_parser.py
src/opime_notify/realtime/: __init__.py  cdshop_adapter.py  mpadapter.py
tests/cli/: test_fetch_schedule.py  test_send_line.py
tests/fetch_schedule/: test_base.py  test_session.py
