[tool.poetry]
name = "opime-notify"
version = "0.1.0"
description = "Wotaku tools for opime"
authors = ["KAWAI Shun <shun@osstech.co.jp>"]
license = "MIT"
packages = [
  { include = "opime_notify", from = "src/" }
]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.19.2"
click = "^8.0.4"
line-bot-sdk = "^2.1.0"
rich = "^11.2.0"
autoflake = "^1.4"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pyproject-flake8 = "^0.0.1-alpha.2"
black = "^22.1.0"
mypy = "^0.931"
pre-commit = "^2.17.0"
poethepoet = "^0.13.1"
isort = "^5.10.1"

[tool.poetry.scripts]
send_line = "opime_notify.main:send_line"

[tool.poe.tasks.test]
cmd = "pytest --cov=src/ --cov-report=html tests/"

[tool.poe.tasks.citest]
cmd = "pytest --cov=src/ --cov-report=xml tests/"

[tool.poe.tasks.lint]
sequence = [
  { cmd = "pflake8 src/ tests/" },
  { cmd = "mypy src/" },
]
ignore_fail = "return_non_zero"

[tool.poe.tasks.format]
sequence = [
  { cmd = "autoflake -ir --remove-all-unused-imports --remove-unused-variables --ignore-init-module-imports src/ tests/" },
  { cmd = "isort --profile black src/ tests/" },
  { cmd = "black src/ tests/" },
  "lint"
]

[tool.flake8]
max-line-length = 88
max-complexity = 10

[tool.mypy]
python_version = 3.9

[[tool.mypy.overrides]]
module = [
  "linebot",
  "linebot.models",
  "linebot.exceptions",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
